# gtkspell

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gtkspell-2.0.pc.in  gtkspell.spec.in  gtkspell3.spec.in
docs/: .cvsignore  Makefile.am  gtkspell-docs.sgml  gtkspell3-sections.txt  tutorial.sgml
docs/tmpl/: .cvsignore  deprecated.sgml  gtkspell.sgml
examples/: .cvsignore  Makefile.am  advanced.c  simple.c
gtkspell/: .cvsignore  Makefile.am  gtkspell-codetable.c  gtkspell-win32.h  gtkspell.c  gtkspell.h  gtkspell3-2.0.pc.in  gtkspell3-3.0.pc.in
intl/: Makefile
m4/: ChangeLog  Makefile  Makefile.in
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  af.po  ak.po  ast.po  be.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  ff.po  fi.po  fo.po  fr.po  ga.po  gl.po  gtkspell3.pot  he.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  ky.po  lg.po  lt.po  lv.po  mn.po  ms.po  nb.po  nl.po  (+24 more)
