noinst_PROGRAMS = simple advanced
simple_LDADD = @GTKSPELL_LIBS@ $(top_builddir)/gtkspell/libgtkspell.la
simple_CFLAGS = @GTKSPELL_CFLAGS@ -I$(top_builddir)
simple_SOURCES = simple.c
advanced_LDADD = @GTKSPELL_LIBS@ $(top_builddir)/gtkspell/libgtkspell.la
advanced_CFLAGS = @GTKSPELL_CFLAGS@ -I$(top_builddir)
advanced_SOURCES = advanced.c
