lib_LTLIBRARIES=libgtkspell.la
AM_CFLAGS=@GTKSPELL_CFLAGS@ -DG_LOG_DOMAIN=\"gtkspell\"
libgtkspell_la_LIBADD=@GTKSPELL_LIBS@ @SPELLER_LIB@
libgtkspell_la_includedir=$(includedir)/gtkspell-2.0/gtkspell
libgtkspell_la_include_HEADERS=gtkspell.h
libgtkspell_la_SOURCES=gtkspell.c deprecated.c gtkspell.h

